--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,9 @@ Title: What the Package Does in One 'Title Case'
      Line
 Version: 1.0
 Date: 2019-12-27
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: One paragraph description of what
-     the package does as one or more full
-     sentences.
+Author: SC19024
+Maintainer: SC19024 <your@email.com>
+Description: This package several useful functions in statistical computation
 License: GPL (>= 2)
 Encoding: UTF-8
 Imports: Rcpp (>= 0.12.18)
